link on mobile version is fixed

--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -1944,6 +1944,7 @@ blockquote {
 }
 .ba-header-right-link i {
   font-weight: 400;
+  color: white;
 }
 .ba-header-right-link .count {
   width: 25px;
